--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,63 +8,73 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Restaurante Bon Appétit</title>
 </head>
+
 <body>
     <header>
         <img id="logo" src="images/logo.png" alt="Logo Restaurante Bon Appétit">
-        <ul class="main_nav">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="menu.html">Menú</a></li>
-            <li><a href="ubicacion.html">Ubicación</a></li>
-            <li><a href="index.html#form_contacto">Contacto</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="menu.html">Menú</a></li>
+                <li><a href="ubicacion.html">Ubicación</a></li>
+                <li><a href="index.html#form_contacto">Contacto</a></li>
+            </ul>
+        </nav>
     </header>
 
     <div class='content'>
         <h1>Restaurante Bon Appétit</h1>
-        <p class="upper_content">Un lugar donde los mejores saberes de la cocina italiana están a la orden del plato, para el deleite de la dama, para el deleite del caballero. ¡Bon Appétit!</p>
-        <div class='contenido_principal'>
+        <p class="upper_content">Un lugar donde los mejores saberes de la cocina italiana están a la orden del plato,
+            para el deleite de la dama, para el deleite del caballero. ¡Bon Appétit!</p>
+
+        <article class='contenido_principal'>
             <div class="frase_con_img">
-                <img src="images/ingredientes_calidad.jpg" alt="Ingredientes de Calidad"/>
-                <p>Con ingredientes de primera y estándares de primera calidad aseguramos realzar el sabor de tus comidas.</p>
+                <img src="images/ingredientes_calidad.jpg" alt="Ingredientes de Calidad" />
+                <p>Con ingredientes de primera calidad y los mejores estándares aseguramos realzar el sabor de tus
+                    comidas.</p>
             </div>
             <div class="frase_con_img">
-                <img src="images/cocina_mediterranea.jpg" alt="Cocina Mediterránea"/>
+                <img src="images/cocina_mediterranea.jpg" alt="Cocina Mediterránea" />
                 <p>Incorporamos las mejores recetas de la cocina mediterránea.</p>
             </div>
             <div class="frase_con_img">
-                <img src="images/equipo.jpg" alt="Equipo Gastronómico"/>
-                <p>Con un equipo de profesionales amantes del arte de la cocina, propuestos a deleitarlo para que se sienta como en casa.</p>
+                <img src="images/equipo.jpg" alt="Equipo Gastronómico" />
+                <p>Con un equipo de profesionales amantes del arte de la cocina, propuestos a deleitarlo para que se
+                    sienta como en casa.</p>
             </div>
-        </div>
-        
-        <div class='contenido_secundario'>
-            <img src="images/pizza.jpg" alt="pizza"/>
-            <p>Muchos historiadores afirman que la pizza, tal y como se conoce en la actualidad, procede de la ciudad de Nápoles (Italia) y aparece como plato popular entre los napolitanos, en algún momento no definido del siglo XVII.</p>
-            <p>Los panes planos y las preparaciones fundamentadas en ellos, como la pizza, son típicos de las cocinas mediterráneas.</p>
-        </div>
+        </article>
 
+        <aside class='contenido_secundario'>
+            <img src="images/pizza.jpg" alt="pizza" />
+            <p>Muchos historiadores afirman que la pizza, tal y como se conoce en la actualidad, procede de la
+                ciudad de Nápoles (Italia) y aparece como plato popular entre los napolitanos, en algún momento no
+                definido del siglo XVII.</p>
+            <p>Los panes planos y las preparaciones fundamentadas en ellos, como la pizza, son típicos de las
+                cocinas mediterráneas.</p>
+        </aside>
     </div>
     <div class="content">
         <form id="form_contacto" class="form_contacto" action="">
             <h2>Formulario de contacto</h2>
             <label>Nombre y Apellido:</label>
-            <Input type="text" name="nombre"/>
+            <Input type="text" name="nombre" required />
             <label>E-Mail:</label>
-            <Input type="email" name="email"/>
+            <Input type="email" name="email" required />
             <label>Teléfono:</label>
-            <Input type="tel" name="telefono"/>
+            <Input type="tel" name="telefono" required />
             <label>Mensaje:</label>
-            <textarea id="subject" name="subject" placeholder="Intente ser lo más descriptivo posible. Muchas gracias!"></textarea>
+            <textarea id="subject" name="subject"
+                placeholder="Intente ser lo más descriptivo posible. Muchas gracias!"></textarea>
             <label id="label_captcha"></label>
-            <input type="text" id="respuesta_captcha"/>
-            <input type="submit" id="btn_submit" class="btn_submit"/>
+            <input type="text" id="respuesta_captcha" required />
+            <input type="submit" class="btn_submit" />
             <div id="mensaje_al_enviar"></div>
-        </form> 
+        </form>
     </div>
     <footer>
         <p>C7 - Iglesias Coqueti Joaquin y Del Sole Enzo</p>
         <p>Creada por estudiantes de primer año de TUDAI</p>
-    </footer>    
-    <script src="js/scripts.js"></script>
+    </footer>
 </body>
+<script src="js/script_index.js"></script>
 </html>
