--- a/ubicacion.html
+++ b/ubicacion.html
@@ -10,12 +10,14 @@
 <body>
     <header>
         <img id="logo" src="images/logo.png" alt="Logo Restaurante Bon Appétit">
-        <ul class="main_nav">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="menu.html">Menú</a></li>
-            <li><a href="ubicacion.html">Ubicación</a></li>
-            <li><a href="index.html#form_contacto">Contacto</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="menu.html">Menú</a></li>
+                <li><a href="ubicacion.html">Ubicación</a></li>
+                <li><a href="index.html#form_contacto">Contacto</a></li>
+            </ul>
+        </nav>
     </header>
     
     <div class='content'>
