Form funcionando con botones Agregar, agregarx3 y limpiar tabla

--- a/menu.html
+++ b/menu.html
@@ -68,7 +68,9 @@
                     <Input type="checkbox" name="apto_celiacos" />
                 </label>
 
-                <input type="submit" class="btn_submit" />
+                <input type="button" class="btn_form" name="btn_agregar" value="Agregar"/>
+                <input type="button" class="btn_form" name="btn_agregarx3" value="Agregar x3"/>
+                <input type="button" class="btn_form" name="btn_limpiar" value="Limpiar Menú"/>
             </form>
         </div>
         <div class='contenido_secundario'>
