finalizacion 2da entrega

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         </form>
     </div>
     <footer>
-        <p>C7 - Iglesias Coqueti Joaquin y Del Sole Enzo</p>
-        <p>Creada por estudiantes de primer año de TUDAI</p>
+        <p>C7 Iglesias Coqueti Joaquin y Del Sole Enzo</p>
+        <p>Creada por estudiantes de 1er año de TUDAI</p>
     </footer>
 </body>
 <script src="js/script_index.js"></script>
