Avances con PUSH

--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,6 @@
                 <h2>Agregar Plato Al Menú</h2>
                 <label for="nombre">Nombre</label>
                 <Input type="text" name="nombre" required />
-
                 <label for="precio">Precio</label>
                 <Input type="number" name="precio" required />
                 <label for="origen">Origen</label>
@@ -40,7 +39,7 @@
                 <Input type="checkbox" name="apto_celiacos" />
             </div>
             <div class="form_col">
-                <input type="button" class="btn_form" name="btn_agregar" value="Agregar" />
+                <input type="button" class="btn_form" id="agregarx1" name="btn_agregar" value="Agregar" />
                 <input type="button" class="btn_form" name="btn_agregarx3" value="Agregar x3" />
                 <input type="button" class="btn_form" name="btn_limpiar" value="Limpiar Menú" />
                 <input type="button" class="btn_form" name="btn_menu_pregargado" value="Menú Precargado" />
