cambio en menu para el opcional

--- a/menu.html
+++ b/menu.html
@@ -89,6 +89,7 @@
             <form class="form_menu" id="form_filtrar_plato" action="">
                 <h2>Filtrar Plato del Menú</h2>
                 <select name="origen">
+                    <option value="all">No Filtrar</option>
                     <option>India</option>
                     <option>Italia</option>
                     <option>Grecia</option>
