--- a/menu.html
+++ b/menu.html
@@ -89,14 +89,15 @@
             <form class="form_menu" id="form_filtrar_plato" action="">
                 <h2>Filtrar Plato del Menú</h2>
                 <select name="origen">
-                    <option value="all">No Filtrar</option>
+                    <option value="">No Filtrar</option>
                     <option>India</option>
                     <option>Italia</option>
                     <option>Grecia</option>
                     <option>México</option>
                     <option>Portugal</option>
                 </select>
-                <input type="submit" class="btn_form" name="btn_filtrar" value="Aplicar" />
+                <input type="submit" class="btn_form" name="btn_filtrar" value="Filtrar (local)" />
+                <input type="button" class="btn_form" name="btn_filtro_mockapi" value="Filtrar (Mockapi)" />
                 <input type="button" class="btn_form" name="btn_cancelar" value="Cancelar" />
             </form>
         </div>
