Identacion de la pagina y eliminado de funciones sin utilizar en js

--- a/ubicacion.html
+++ b/ubicacion.html
@@ -1,10 +1,12 @@
 <div class='content'>
     <div class='contenido_principal'>
-        <img src="images/mapa.png" alt="mapa con ubicacion" class="mapa"/>
+        <img src="images/mapa.png" alt="mapa con ubicacion" class="mapa" />
     </div>
     <button class="btn_cont_opcional botones hide_from_tablet">¿Quieres ver una curiosidad?</button>
     <div class='contenido_secundario cont_opcional show_from_tablet'>
-        <img src="images/lasagna.jpg" alt="lasagna"/>
-        <p>El origen de la lasaña es tan antiguo que el mismísimo filósofo Cicerón era un gran amante de este plato, en la Antigua Roma en el siglo III. a.C. En esa época la lasaña era un plato que consistía en cuadros de pasta con legumbres y quesos. En esa época la lasaña se realizaba en cazuelas de barro.</p>
+        <img src="images/lasagna.jpg" alt="lasagna" />
+        <p>El origen de la lasaña es tan antiguo que el mismísimo filósofo Cicerón era un gran amante de este plato, en
+            la Antigua Roma en el siglo III. a.C. En esa época la lasaña era un plato que consistía en cuadros de pasta
+            con legumbres y quesos. En esa época la lasaña se realizaba en cazuelas de barro.</p>
     </div>
 </div>
