se agregó await en limpiar y precargar

--- a/menu.html
+++ b/menu.html
@@ -70,6 +70,7 @@
                 <Input type="number" name="precio" required />
                 <label for="origen">Origen</label>
                 <select name="origen">
+                    <option>España</option>
                     <option>India</option>
                     <option>Italia</option>
                     <option>Grecia</option>
@@ -90,6 +91,7 @@
                 <h2>Filtrar Plato del Menú</h2>
                 <select name="origen">
                     <option value="">No Filtrar</option>
+                    <option>España</option>
                     <option>India</option>
                     <option>Italia</option>
                     <option>Grecia</option>
